# trip_planner_ai

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
agent/: agent_workflow.py  agentic_workflow.py
notebook/: experiment.ipynb
output/: AI_Trip_Planner_2025-07-11_19-19-01.md
prompt_library/: prompt.py
static/: style.css
tools/: arthamatic_op_tool.py  place_search_tool.py
utils/: place_info_search.py  save_to_document.py
