[project]
name = "trip_planner_ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
]

[dependency-groups]
dev = [
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-experimental>=0.3.4",
    "langchain-google-community>=2.0.7",
    "langchain-groq>=0.3.4",
    "langchain-openai>=0.3.27",
    "langchain-tavily<0.2",
    "langgraph>=0.5.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "trip-planner-ai",
    "uvicorn>=0.34.3",
]

[tool.uv.sources]
trip-planner-ai = { workspace = true }
